[package]
name = "repro"
resolver = "2"
rust-version = "1.75.0"
edition = "2021"
version = "0.1.0"

[profile.release]
lto = "fat"
opt-level = "z"
codegen-units = 1
overflow-checks = false
panic = "abort"
strip = "debuginfo"

[profile.dev]
lto = "thin"
debug = "full"    #Symbols are nice and they don't increase the size on Flash
opt-level = "z"
codegen-units = 1

[features]
default = ["std", "embassy", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std"]
alloc = ["esp-idf-svc/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]
embassy = [
  "esp-idf-svc/embassy-sync",
  "esp-idf-svc/critical-section",
  "esp-idf-svc/embassy-time-driver",
]

[dependencies]
log = { version = "0.4", default-features = false }
esp-idf-svc = { version = "0.48.0", default-features = false }
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
enumset = { version = "1.1.3", features = ["serde"] }
embedded-svc = { version = "0.27.0", features = ["use_serde"] }
anyhow = "1.0.79"
# hyper-util = { version = "0.1.2", features = [
#   "server-auto",
#   "service",
#   "tokio",
#   "http1",
#   "http2",
# ] }
